add sponza demo scene

--- a/course5/course5.vcxproj
+++ b/course5/course5.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\camera.cpp" />
+    <ClCompile Include="..\file_utility.cpp" />
     <ClCompile Include="..\gl3w.c" />
     <ClCompile Include="..\gl_utility.cpp" />
     <ClCompile Include="..\image.cpp" />
