--- a/course5/course5.vcxproj.filters
+++ b/course5/course5.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="..\timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\file_utility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
