--- a/jade/jade.vcxproj.filters
+++ b/jade/jade.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClCompile Include="..\timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\file_utility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="texture.cpp">
+      <Filter>jade\Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\GL\gl3w.h">
@@ -145,6 +151,9 @@
     </ClInclude>
     <ClInclude Include="..\file_utility.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="texture.h">
+      <Filter>jade\Header</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
