--- a/jade/jade.vcxproj.filters
+++ b/jade/jade.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="light.cpp">
       <Filter>jade\Source</Filter>
     </ClCompile>
+    <ClCompile Include="renderer_ray_tracing.cpp">
+      <Filter>jade\Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\GL\gl3w.h">
@@ -183,6 +186,9 @@
       <Filter>jade\Header</Filter>
     </ClInclude>
     <ClInclude Include="renderer_path_tracing.h">
+      <Filter>jade\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="renderer_ray_tracing.h">
       <Filter>jade\Header</Filter>
     </ClInclude>
   </ItemGroup>
